--- a/css/style.css
+++ b/css/style.css
@@ -166,8 +166,18 @@ p.italic{
 
 #meniu ul li{
     display: inline;
+    padding: 3px 29px;
+}
+
+#meniu li.border{
     border-right: 1px solid #ffffff;
-    padding: 3px 34px;
+}
+
+#meniu li.border-none{
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    background-image: -webkit-linear-gradient(left, #791717 0%, #EA5132 100%);
 }
 
 #meniu ul{
