Suformuota užklausų sąrašo peržiūra (su puslapiavimu). Pataisyta ne visada veikusi paieška. Pakeista užklausos peržiūra, kad veiktų su labai ilgu pavadinimu arba ilgais vartotojo duomenimis.

--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,17 @@ table {
     border-spacing: 0;
 }
 
+/* CSS */
 body {
     padding: 0;
     background: #fff url('/img/bg.jpg') repeat-x;
     font: 0.8em/1.5 "arial",sans-serif;
     color: #303030;
+}
+
+a {
+    text-decoration: none;
+    color: #4169e1;
 }
 
 #layout{
@@ -117,11 +123,17 @@ color: #d0553d;
 }
 
 #request .subject-date p,h2{
-    display: inline;
+    display: inline-block;
+}
+
+h2 {
+    overflow-wrap: break-word;
+    display: inline-block;
+    width: 800px;
 }
 
 .subject-date, .client-information{
-    margin-bottom: 15px;
+    margin: 15px 0;
 }
 
 #request .subject-date p{
@@ -136,6 +148,7 @@ color: #d0553d;
 #request .client-information p{
     float: left;
     width: 33%;
+    overflow-wrap: break-word;
 }
 
 .pcenter {
@@ -214,3 +227,103 @@ p.italic{
     border: none;
 }
 
+/* Pagination */
+
+#pagination {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#pagination .page, #pagination .prev, #pagination .next {
+    display: inline-block;
+    margin: 4px;
+}
+
+#pagination .page a {
+    display: block;
+    border: 1px solid #000;
+    padding: 2px 5px;
+}
+
+#pagination .page a:hover {
+    background: #f6f6f6;
+}
+
+#pagination .current {
+    padding: 2px 5px;
+    border: 1px solid #000;
+    font-weight: bold;
+    background: #efefef;
+}
+
+/* Request-list */
+
+table#requests-list {
+    width: 100%;
+}
+
+#requests-list tr {
+    border: none;
+    border-bottom: solid 1px #ccc;
+}
+
+#requests-list tr:hover td {
+    background: #f6f6f6;
+}
+
+#requests-list th {
+    font-weight: bold;
+    padding: 5px 0;
+}
+
+#requests-list td {
+    word-break: break-all;
+    overflow: hidden;
+    padding: 5px 5px 4px;
+    border: none;
+    height: 45px;
+}
+
+#requests-list td.subject {
+    color: #a5422f;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+#requests-list .created {
+    width: 60px;
+}
+
+#requests-list td.created {
+    color: #757575;
+    font-size: 11px;
+}
+
+#requests-list .author {
+    width: 150px;
+}
+
+#requests-list .email {
+    width: 190px;
+}
+
+#requests-list .status {
+    width: 2px;
+}
+
+#requests-list .status.color2 {
+    background: #f3fff3;
+}
+
+#requests-list .status.color3 {
+    background: #fff3f3;
+}
+
+#requests-list td a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    max-height: 40px;
+    overflow: hidden;
+    color:inherit;
+}
