Sutvarkyta prisijungimų ir reigstracijos sistema.  Pašalinti nenaudojami views. Sukurta statistika vadybininkams. Pataisytas 404 puslapis. Rodo ar tai pirmoji kliento užklausa. Galima jas peržiūrėti.

--- a/css/style.css
+++ b/css/style.css
@@ -1,91 +1,91 @@
-/*RESET*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    /*font-size: 100%;*/
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-
-h1, h2, h3, h4, h5, h6 { margin:15px 0 7px 0; }
-h1 { font-size:200%; }
-h2 { font-size:160%; font-weight: normal; color: #d0553d; }
-h3 { font-size:105%; padding-bottom: 5px; margin-top: 25px; margin-bottom: 14px;}
-h4 { font-size:120%; }
-h5 { font-size:100%; }
-
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
+@import "reset.css";
 
 /* CSS */
 body {
     padding: 0;
     background: #fff url('/img/bg.jpg') repeat-x;
-    font: 0.8em/1.5 "arial",sans-serif;
+    font: 0.8em/1.5 "arial", sans-serif;
     color: #303030;
 }
 
 a {
+    color: #d0553d;
     text-decoration: none;
-    color: #4169e1;
 }
 
-#layout{
+h1, h2, h3, h4, h5, h6 {
+    margin: 15px 0 7px 0;
+}
+
+h1 {
+    font-size: 200%;
+}
+
+h2 {
+    font-size: 160%;
+    font-weight: normal;
+    color: #d0553d;
+}
+
+h3 {
+    font-size: 120%;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 5px;
+    margin-top: 25px;
+    margin-bottom: 14px;
+    font-weight: bold;
+}
+
+h4 {
+    font-size: 120%;
+}
+
+h5 {
+    font-size: 100%;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.align-center {
+    text-align: center;
+}
+
+.align-right {
+    text-align: right;
+}
+
+.clear {
+    clear: both;
+}
+
+#layout {
     margin: 0 auto;
     width: 800px;
 }
 
-#header{
-padding: 10px 0 0 0;
-position: relative;
+#header {
+    padding: 10px 0 0 0;
+    position: relative;
+    margin-bottom: 30px;
 }
 
-#content{
-  padding-bottom: 50px;
+#content {
+    padding-bottom: 50px;
 }
 
-#header h1{
-text-decoration: none;
-color: #d0553d;
+#header h1 {
+    text-decoration: none;
+    color: #d0553d;
     padding-left: 50px;
- }
+}
 
-#request-form{
+#request-form {
     padding-left: 50px;
     margin: 0 auto;
     height: 450px;
@@ -93,7 +93,7 @@ color: #d0553d;
     padding-top: 16px;
 }
 
-#request-form .flabel{
+#request-form .flabel {
     margin: 10px 0 0;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -108,21 +108,21 @@ color: #d0553d;
     border-top: 1px solid #DADADA;
 }
 
-#request table, td, tr{
-    border : 1px solid #D0553D;
+#request table, td, tr {
+    border: 1px solid #D0553D;
 }
 
-#request table{
-    border-collapse:collapse;
+#request table {
+    border-collapse: collapse;
     width: 700px;
 }
 
-#request{
+#request {
     float: left;
     margin-top: 20px;
 }
 
-#request .subject-date p,h2{
+#request .subject-date p, h2 {
     display: inline-block;
 }
 
@@ -132,83 +132,73 @@ h2 {
     width: 800px;
 }
 
-.subject-date, .client-information{
-    margin: 15px 0;
-}
-
-#request .subject-date p{
+#request .subject-date p {
     float: right;
     color: #767676;
 }
 
-#request .subject-date h2{
+#request .subject-date h2 {
     color: #a5422f;
 }
 
-#request .client-information p{
+#request .client-information {
+    margin: 15px 0;
+}
+
+#request .client-information div {
     float: left;
     width: 33%;
     overflow-wrap: break-word;
 }
 
-.pcenter {
-    text-align: center;
+#request .client-information div span, #request .client-information div form {
+    display: inline;
 }
 
-.pright {
-    text-align: right;
+#request .client-information input {
+    background: none;
+    border: none;
+    display: inline;
+    color: #4169e1;
 }
 
-p.bold{
-    font-weight: bold;
-}
-
-p.italic{
-    font-style: italic;
-}
-
-.clear{
-    clear: both;
-}
-
-#meniu{
+#meniu {
     background-color: #cb4329;
     height: 40px;
     width: 100%;
 }
 
-#meniu ul li{
+#meniu ul li {
     display: inline;
     padding: 3px 29px;
 }
 
-#meniu li.border{
+#meniu li.border {
     border-right: 1px solid #ffffff;
 }
 
-#meniu li.border-none{
+#meniu li.border-none {
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
     background-image: -webkit-linear-gradient(left, #791717 0%, #EA5132 100%);
 }
 
-#meniu ul{
+#meniu ul {
     padding-top: 11px;
     float: left;
 }
 
-
-#meniu a{
+#meniu a {
     color: #ffffff;
     text-decoration: none;
 }
 
-#meniu a:hover{
+#meniu a:hover {
     color: #f2aa7a;
 }
 
-#meniu .search{
+#meniu .search {
     position: relative;
     float: right;
     margin-right: 30px;
@@ -216,11 +206,11 @@ p.italic{
     display: inline;
 }
 
-#meniu .search input{
+#meniu .search input {
     border: 1px solid #757575;
 }
 
-#meniu .search input.submit{
+#meniu .search input.submit {
     background: url("/img/search-icon.png") no-repeat;
     width: 28px;
     height: 19px;
@@ -311,12 +301,20 @@ table#requests-list {
     width: 2px;
 }
 
+#requests-list .status.color0 {
+    background: #eee;
+}
+
+#requests-list .status.color1 {
+    background: #ffffbb;
+}
+
 #requests-list .status.color2 {
-    background: #f3fff3;
+    background: #ddffdd;
 }
 
 #requests-list .status.color3 {
-    background: #fff3f3;
+    background: #ffdddd;
 }
 
 #requests-list td a {
@@ -325,5 +323,14 @@ table#requests-list {
     height: 100%;
     max-height: 40px;
     overflow: hidden;
-    color:inherit;
+    color: inherit;
+}
+
+.not-found {
+    width: 730px;
+    margin: 5px 20px;
+    background: #ffdddd;
+    border: solid 3px #ffaaaa;
+    padding: 10px;
+    font-style: italic;
 }
