--- a/css/table-style.css
+++ b/css/table-style.css
@@ -42,3 +42,7 @@ table.tablesorter thead tr .headerSortDown {
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
     background-color: #e74e2f;
 }
+
+table{
+
+}
