--- a/css/table-style.css
+++ b/css/table-style.css
@@ -1,21 +1,51 @@
-/* tables */
+#one-column-emphasis
+{
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 11px;
+    width: 100%;
+    text-align: left;
+    border-collapse: collapse;
+}
+#one-column-emphasis th
+{
+    font-size: 13px;
+    font-weight: normal;
+    padding: 12px 15px;
+}
+#one-column-emphasis td
+{
+    padding: 10px 15px;
+    border-top: none;
+}
+.oce-first
+{
+    background: white;
+    border-right: 0px solid transparent;
+    border-left: 0px solid transparent;
+}
+#one-column-emphasis tr:hover td
+{
+    color: black;
+    background: #e74e2f;
+}
+
 table.tablesorter {
     font-family:arial;
     background-color: #CDCDCD;
     margin:10px 0pt 15px;
-    font-size: 8pt;
+    font-size: 9pt;
     width: 100%;
     text-align: left;
 }
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
-    background-color: #d0523b;
-    border: 1px solid #FFF;
+    background-color: white;
+    border-bottom: 1px solid #D0553D;
     font-size: 8pt;
     padding: 4px;
 }
 
 table.tablesorter tbody tr td{
-    border: 1px solid #FFF;
+    border-bottom: 1px solid #D0553D;
 }
 table.tablesorter thead tr .header {
     background-image: url(/img/bg.gif);
@@ -24,13 +54,14 @@ table.tablesorter thead tr .header {
     cursor: pointer;
 }
 table.tablesorter tbody td {
-    color: #3D3D3D;
+    color: #000000;
     padding: 4px;
     background-color: #FFF;
     vertical-align: top;
 }
+
 table.tablesorter tbody tr.odd td {
-    background-color:#e88e52;
+    background-color:white;
     text-align: center;
 }
 table.tablesorter thead tr .headerSortUp {
@@ -40,9 +71,5 @@ table.tablesorter thead tr .headerSortDown {
     background-image: url(/img/desc.gif);
 }
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-    background-color: #e74e2f;
-}
-
-table{
-
+    background-color: white;
 }
