statistikos, login, logout bugfix. Pradėti dėti fiksuoti duomenys į sql užklausas.

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,11 @@ h5 {
     clear: both;
 }
 
+.current {
+    color: #a5422f;
+    font-weight: bold;
+}
+
 #layout {
     margin: 0 auto;
     width: 800px;
