--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ p.logout{
     padding: 5px 5px;
 }
 
-#log-in input[type="text"], input[type="password"]{
+#log-in input[type="text"], input[type="password"], #register-form input[type="text"]{
     margin: 5px 5px;
 }
 
@@ -450,6 +450,13 @@ p.login{
     float: right;
     padding: 30px;
 }
+
+#log-in p, #register-form p{
+    color: red;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
 
 /* register form */
 
